# sig-options-platform

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
.claude/: settings.local.json
cpp_engine/include/: binomial_model.h  black_scholes.h  math_utils.h  monte_carlo.h  option_types.h  volatility_surface.h
cpp_engine/src/: binomial_model.cpp  black_scholes.cpp  math_utils.cpp  monte_carlo.cpp  volatility_surface.cpp
market_data/src/: data_provider.py  volatility_estimator.py
market_making/src/: backtesting_optimization.py  execution_algorithms.py  hedging_risk_management.py  main_framework.py  market_making_strategies.py  monitoring_dashboard.py  performance_monitoring.py  portfolio_optimization.py  quote_management.py
options_analytics/: README.md
options_analytics/src/: alert_system.py  analytics_framework.py  flow_analysis.py  market_analysis.py  performance_analytics.py  portfolio_monitor.py  trading_interface.py  visualization_components.py
python_api/src/: __init__.py  market_maker.py  pricing_engine.py
risk_management/src/: risk_manager.py
streamlit_options_platform/: .gitignore  BACKTESTING_README.md  FEATURES.md  GITHUB_SETUP.md  LICENSE  PROJECT_REPORT.md  README.md  demo.py  launch.bat  main.py  requirements.txt  run_app.py
streamlit_options_platform/backtesting/: __init__.py  backtesting_dashboard.py  backtesting_engine.py  monte_carlo_engine.py  performance_analytics.py  strategy_validator.py
streamlit_options_platform/strategies/: __init__.py  example_strategies.py
streamlit_options_platform/tests/: __init__.py  run_tests.py  test_backtesting.py
streamlit_options_platform/utils/: data_provider.py  market_analysis.py  portfolio_manager.py  pricing_engine.py  visualization.py
tests/: test_market_maker.py  test_pricing_engine.py
volatility_surface/: README.md
volatility_surface/src/: arbitrage_detection.py  calibration_engine.py  interpolation_methods.py  market_microstructure.py  model_validation.py  surface_models.py  surface_visualization.py  testing_framework.py  volatility_framework.py
web_interface/src/: index.html  server.py
